# mlops-wandb-bucket-ref

./: .dockerignore  .gitignore  .neuro.toml  .pre-commit-config.yaml  CHANGELOG.md  CLI.md  Dockerfile  Makefile  README.md  pyproject.toml  python37.Dockerfile  setup.cfg  setup.py
.github/workflows/: ci.yml  test.yaml
.neuro/: live.yaml
CHANGELOG.D/: 111.feature  111.misc  112.feature  116.misc  143.misc
build-tools/: CLI.in.md  cli-help-generator.py
requirements/: python-base.txt  python-dev.txt
tests/integration/: conftest.py  test_api.py
wabucketref/: __init__.py  api.py  cli.py  utils.py
